fixed layout error

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
         <div class="navbar-item" style="color:yellow; font-size: 1.5em; font-weight: 600;">
           ProductiveSlug
         </div>
-        <a class="navbar-item" style="color:white; border: solid .1px white" href="[[=URL('new_test', signer=url_signer)]]">
+        <a class="navbar-item" style="color:white; border: solid .1px white" href="[[=URL('new_test')]]">
           New Test
           <!-- <img class="logo" width="150" src="images/site_icon.png"> -->
         </a>
