--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
           ProductiveSlug
         </div>
         <a class="navbar-item" style="color:white; border: solid .1px white" href="[[=URL('new_test')]]">
-          New Test
+          Click Here to Load Tests
           <!-- <img class="logo" width="150" src="images/site_icon.png"> -->
         </a>
 
